; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/q68/extr_q68-jit.c_JIT_EMIT_TEST_cc.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/q68/extr_q68-jit.c_JIT_EMIT_TEST_cc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32*)* @JIT_EMIT_TEST_cc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @JIT_EMIT_TEST_cc(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  store i32 %0, i32* %3, align 4
  store i32* %1, i32** %4, align 8
  %5 = load i32, i32* %3, align 4
  switch i32 %5, label %54 [
    i32 130, label %6
    i32 140, label %9
    i32 137, label %12
    i32 135, label %15
    i32 143, label %18
    i32 142, label %21
    i32 132, label %24
    i32 141, label %27
    i32 129, label %30
    i32 128, label %33
    i32 131, label %36
    i32 133, label %39
    i32 139, label %42
    i32 134, label %45
    i32 138, label %48
    i32 136, label %51
  ]

6:                                                ; preds = %2
  %7 = load i32*, i32** %4, align 8
  %8 = call i32 @JIT_EMIT_TEST_T(i32* %7)
  br label %54

9:                                                ; preds = %2
  %10 = load i32*, i32** %4, align 8
  %11 = call i32 @JIT_EMIT_TEST_F(i32* %10)
  br label %54

12:                                               ; preds = %2
  %13 = load i32*, i32** %4, align 8
  %14 = call i32 @JIT_EMIT_TEST_HI(i32* %13)
  br label %54

15:                                               ; preds = %2
  %16 = load i32*, i32** %4, align 8
  %17 = call i32 @JIT_EMIT_TEST_LS(i32* %16)
  br label %54

18:                                               ; preds = %2
  %19 = load i32*, i32** %4, align 8
  %20 = call i32 @JIT_EMIT_TEST_CC(i32* %19)
  br label %54

21:                                               ; preds = %2
  %22 = load i32*, i32** %4, align 8
  %23 = call i32 @JIT_EMIT_TEST_CS(i32* %22)
  br label %54

24:                                               ; preds = %2
  %25 = load i32*, i32** %4, align 8
  %26 = call i32 @JIT_EMIT_TEST_NE(i32* %25)
  br label %54

27:                                               ; preds = %2
  %28 = load i32*, i32** %4, align 8
  %29 = call i32 @JIT_EMIT_TEST_EQ(i32* %28)
  br label %54

30:                                               ; preds = %2
  %31 = load i32*, i32** %4, align 8
  %32 = call i32 @JIT_EMIT_TEST_VC(i32* %31)
  br label %54

33:                                               ; preds = %2
  %34 = load i32*, i32** %4, align 8
  %35 = call i32 @JIT_EMIT_TEST_VS(i32* %34)
  br label %54

36:                                               ; preds = %2
  %37 = load i32*, i32** %4, align 8
  %38 = call i32 @JIT_EMIT_TEST_PL(i32* %37)
  br label %54

39:                                               ; preds = %2
  %40 = load i32*, i32** %4, align 8
  %41 = call i32 @JIT_EMIT_TEST_MI(i32* %40)
  br label %54

42:                                               ; preds = %2
  %43 = load i32*, i32** %4, align 8
  %44 = call i32 @JIT_EMIT_TEST_GE(i32* %43)
  br label %54

45:                                               ; preds = %2
  %46 = load i32*, i32** %4, align 8
  %47 = call i32 @JIT_EMIT_TEST_LT(i32* %46)
  br label %54

48:                                               ; preds = %2
  %49 = load i32*, i32** %4, align 8
  %50 = call i32 @JIT_EMIT_TEST_GT(i32* %49)
  br label %54

51:                                               ; preds = %2
  %52 = load i32*, i32** %4, align 8
  %53 = call i32 @JIT_EMIT_TEST_LE(i32* %52)
  br label %54

54:                                               ; preds = %2, %51, %48, %45, %42, %39, %36, %33, %30, %27, %24, %21, %18, %15, %12, %9, %6
  ret void
}

declare dso_local i32 @JIT_EMIT_TEST_T(i32*) #1

declare dso_local i32 @JIT_EMIT_TEST_F(i32*) #1

declare dso_local i32 @JIT_EMIT_TEST_HI(i32*) #1

declare dso_local i32 @JIT_EMIT_TEST_LS(i32*) #1

declare dso_local i32 @JIT_EMIT_TEST_CC(i32*) #1

declare dso_local i32 @JIT_EMIT_TEST_CS(i32*) #1

declare dso_local i32 @JIT_EMIT_TEST_NE(i32*) #1

declare dso_local i32 @JIT_EMIT_TEST_EQ(i32*) #1

declare dso_local i32 @JIT_EMIT_TEST_VC(i32*) #1

declare dso_local i32 @JIT_EMIT_TEST_VS(i32*) #1

declare dso_local i32 @JIT_EMIT_TEST_PL(i32*) #1

declare dso_local i32 @JIT_EMIT_TEST_MI(i32*) #1

declare dso_local i32 @JIT_EMIT_TEST_GE(i32*) #1

declare dso_local i32 @JIT_EMIT_TEST_LT(i32*) #1

declare dso_local i32 @JIT_EMIT_TEST_GT(i32*) #1

declare dso_local i32 @JIT_EMIT_TEST_LE(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
